--- a/session7/index.htm
+++ b/session7/index.htm
@@ -34,7 +34,7 @@
             <li class="DropdownList">
                 <a>Search Engines</a>
                     <div class="DropdownBox">
-                    <a href="http://www.google.com">Google</a>s
+                    <a href="http://www.google.com">Google</a>
                     <a href="http://www.bing.com">Bing</a>
                     </div>
             </li>
