--- a/session11/index.htm
+++ b/session11/index.htm
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="ex1.css" type="text/css" />
     <style>
         body {background-color: dimgrey; border-style: solid; border-width: 4px; border-color: black; padding: 5px}
-        h1 {text-align: center; font-family: Arial;}
+        h1 h2 {text-align: center; font-family: Arial;}
         p {text-align: center; font-family: Arial; float: inline-end;}
         span {color: brown;}
         
