--- a/release1/ContactUs.html
+++ b/release1/ContactUs.html
@@ -55,7 +55,7 @@
         <h1> Contact Us</h1>
         <div class="body">
             <h2>Fill up the form below to reach out!</h2>
-            <form action="mailer.php" method="post"> 
+            <form action="http://wtspring13sec2.babson.edu/gordon/mailer.php" method="post"> 
                 <table style="margin-right: auto; margin-left: auto;">
                 <tr>
                     <td>First Name: </td>
