--- a/release1/index.html
+++ b/release1/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="Formula Top Three - Brief of Formula 1 and current standings. Understand how Formula 1 works, a brief history, and experience Formula 1">
     <meta name="keywords" content="Formula Top Three, Welcome to the World of Formula 1, Experience Formula 1, Formula 1 tracks, Formula 1 2021, Formula 1 Standings, Review of the Last Race">
     <meta name="author" content="Romil Agarwal">
+    <!--You can find the colspan attribute inside the table tags in Line 63 of McLaren.html, Mercedes.html, RedBull.html-->
+    <!--You can locate the numbered list with indented sublists inside this index.html from Line 87 onwards-->
+    <!--You can find hotspots in the McLaren.html, Mercedes.html and RedBull.html in line 120-->
+    <!--The video can be found on this index page in line 132. Background Music can be found with controls in 134-->
     <title>Formula Top Three</title>
     <link rel="stylesheet" href="externalstylesheet.css" type="text/css">
     <style>
