--- a/release1/McLaren.html
+++ b/release1/McLaren.html
@@ -60,7 +60,7 @@
         
         <table style="float: left; margin-left: 100px;">
             <tr>
-                <td>Team Principal: </td>
+                <td colspan="1">Team Principal: </td>
                 <td>Andreas Seidl</td>
             </tr>
             <tr>
