--- a/release1/index.html
+++ b/release1/index.html
@@ -50,7 +50,7 @@
                 </div>
             </li>
             <li class="DropdownList">
-                <a href="Red_Bull.html">Red Bull Racing</a>
+                <a href="RedBull.html">Red Bull Racing</a>
                 <div class="DropdownBox">
                     <a href="Max.html">Max Verstappen</a>
                     <a href="Checo.html">Sergio Perez</a>
