--- a/session23/index.htm
+++ b/session23/index.htm
@@ -46,11 +46,8 @@
     <p id="append">Hi, I'm <span>Romil</span> and I'm from Mumbai, India. </p>
     <p><button id="b1">Click to learn how to contact me.</button></p>
     <h1> <img id="myimg" src="IMG_5338.jpg" width="150" alt="image unavailable" /> </h1>
-    <p><button id="b4">Click to make image bigger.</button></p>
-    <p><button id="b2">Click to Remove the image.</button></p>
-    <p id="texteffect">Click Me to Make me Bold.</p>
-    <p><button id="b3">Click Me to Make me Red.</button></p>
-    
+    <p><button id="b4">Click to make image bigger.</button> &nbsp; <button id="b2">Click to Remove the image.</button> &nbsp; <button id="b3">Click Me to Make me Red.</button>  </p>
+    <p id="texteffect">Click Me to Make me Bold.</p>    
     <hr>
     <br>
     <p>A fun fact about me is that this will be my first fully in person semester at college. </p>
