--- a/release2/Mercedes.html
+++ b/release2/Mercedes.html
@@ -118,7 +118,7 @@
         <p style="text-align: center;"><img src="Mercedes_Drivers.jpg" usemap="#image-map" width="960" alt="Mercedes Drives" ></p>
 
         <map name="image-map">
-    <area alt="Lewis" title="" href="lewis.html" coords="0,0,480,540" shape="rect">
+    <area alt="Lewis" title="" href="Lewis.html" coords="0,0,480,540" shape="rect">
     <area alt="Valtteri" title="" href="Valtteri.html" coords="481,0,960,540" shape="rect">
     </map>
         <h4 style="text-align: center;"> Click on the driver photos to learn more.</h4>
