--- a/release2/Checo.html
+++ b/release2/Checo.html
@@ -53,6 +53,9 @@
             <li>
                 <a href="AboutMe.html">About Me</a>
             </li>
+            <li>
+                <a href="Credits.html">Credits</a>
+            </li>
         </ul>
         </div>
         <h1 style="color: #ffd300;">Sergio Perez</h1>
