--- a/release2/McLaren.html
+++ b/release2/McLaren.html
@@ -52,6 +52,9 @@
             <li>
                 <a href="AboutMe.html">About Me</a>
             </li>
+            <li>
+                <a href="Credits.html">Credits</a>
+            </li>
         </ul>
         </div>
         <h1> McLaren F1 Team</h1>
