--- a/release2/AboutMe.html
+++ b/release2/AboutMe.html
@@ -50,6 +50,9 @@
             <li>
                 <a href="AboutMe.html">About Me</a>
             </li>
+            <li>
+                <a href="Credits.html">Credits</a>
+            </li>
         </ul>
         </div>
         <h1> About Me</h1>
