--- a/release2/ContactUs.html
+++ b/release2/ContactUs.html
@@ -72,6 +72,9 @@
             <li>
                 <a href="AboutMe.html">About Me</a>
             </li>
+            <li>
+                <a href="Credits.html">Credits</a>
+            </li>
         </ul>
         </div>
         <h1> Contact Us</h1>
