--- a/release2/Lewis.html
+++ b/release2/Lewis.html
@@ -54,6 +54,9 @@
             <li>
                 <a href="AboutMe.html">About Me</a>
             </li>
+            <li>
+                <a href="Credits.html">Credits</a>
+            </li>
         </ul>
         </div>
         <h1 style="color: #67666b;">Lewis Hamilton</h1>
