--- a/release2/Mercedes.html
+++ b/release2/Mercedes.html
@@ -52,6 +52,9 @@
             <li>
                 <a href="AboutMe.html">About Me</a>
             </li>
+            <li>
+                <a href="Credits.html">Credits</a>
+            </li>
         </ul>
         </div>
         <h1 style="color: #67666b;"> Mercedes AMG Petronas Formula 1 Team</h1>
