--- a/release2/RedBull.html
+++ b/release2/RedBull.html
@@ -52,6 +52,9 @@
             <li>
                 <a href="AboutMe.html">About Me</a>
             </li>
+            <li>
+                <a href="Credits.html">Credits</a>
+            </li>
         </ul>
         </div>
         <h1 style="color: #ffd300;"> Red Bull Racing Honda</h1>
