--- a/release2/index.html
+++ b/release2/index.html
@@ -89,6 +89,9 @@
             <li>
                 <a href="AboutMe.html">About Me</a>
             </li>
+            <li>
+                <a href="Credits.html">Credits</a>
+            </li>
         </ul>
         </div>
         <br>
