--- a/release2/Credits.html
+++ b/release2/Credits.html
@@ -5,8 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Credits</title>
+    <link rel="stylesheet" href="externalstylesheet.css" type="text/css">
+    <style>
+        body {background-image: linear-gradient(#03bfb5, #ff9700, #000b8d);}
+        h2 {text-align: center;}
+        h1 {text-align: center; font-size: 30pt;}
+        div.body {border-style: solid; border-color: rgb(0,0,0); text-align: justify; border-radius: 25px; background-color: white; margin-right: 100px; margin-left: 100px; padding-left: 40px; padding-right: 40px; padding-top: 10px; padding-bottom: 10px; text-align: center;} 
+        p.text {text-align: justify;}
+    </style>
+    <script>
+
+    </script>
 </head>
 <body>
+    <div class="Navigation_Bar">
+        <ul>
+            <li>
+                <a href="index.html" class="active"> Home </a>
+            </li>
+            <li class="DropdownList">
+                <a href="Mercedes.html">Mercedes F1</a>
+                <div class="DropdownBox">
+                    <a href="Lewis.html">Lewis Hamilton</a>
+                    <a href="Valtteri.html">Valtteri Bottas</a>
+                </div>
+            </li>
+            <li class="DropdownList">
+                <a href="McLaren.html">McLaren Racing</a>
+                <div class="DropdownBox">
+                    <a href="Daniel.html">Daniel Ricciardo</a>
+                    <a href="Lando.html"> Lando Norris</a>
+                </div>
+            </li>
+            <li class="DropdownList">
+                <a href="RedBull.html">Red Bull Racing</a>
+                <div class="DropdownBox">
+                    <a href="Max.html">Max Verstappen</a>
+                    <a href="Checo.html">Sergio Perez</a>
+                </div>
+            </li>
+            <li>
+                <a href="ContactUs.html">Contact Us</a>
+            </li>
+            <li>
+                <a href="AboutMe.html">About Me</a>
+            </li>
+            <li>
+                <a href="Credits.html">Credits</a>
+            </li>
+        </ul>
+        </div>
+    
     
 </body>
 </html>
