--- a/release2/projectMobile.htm
+++ b/release2/projectMobile.htm
@@ -223,10 +223,9 @@
             <p class="cap" id="cap1">Click Heading to Expand.</p>
             <div class="hide" id="hid1">
             <h2>Formula 1 from the eyes of a Driver</h2>
-            <p style="text-align: center;"> <iframe width="1020" height="59.1%" src="https://www.youtube.com/embed/JgpSHvw44z4?mute=1" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+            <p style="text-align: center;"> <iframe height="90%" src="https://www.youtube.com/embed/JgpSHvw44z4?mute=1" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
             <p style="text-align: center;"> Yuki Tsunoda at Imola, Italy.</p>
-            <h2>Hear the sound of an F1 Engine!</h2>
-            <p style="text-align: center;"><audio src="F1_Engine.mp3" controls></audio></p>
+            
         </div>
         </div>
         <br>
