--- a/release2/projectMobile.htm
+++ b/release2/projectMobile.htm
@@ -30,9 +30,9 @@
     /* The background image has been sourced from: https://www.wallpapertip.com/wmimgs/76-763647_chequered-flag-data-src-full-340093-waving-checkered.jpg and it has been edited on Canva for use.*/
     h2 {text-align: center; font-weight: normal;}
     h1 {text-align: center; font-size: 25pt; font-weight: normal;}
-    div.body {border-style: solid; border-color: rgb(245,32,64); text-align: justify; border-radius: 25px; background-color: white; margin-right: 2%; margin-left: 2%; padding-left: 0.1%; padding-right: 0.1%; padding-top: 0.1%; padding-bottom: 0.1%;} 
+    div.body {border-style: solid; border-color: rgb(245,32,64); text-align: justify; border-radius: 25px; background-color: white; margin-right: 2%; margin-left: 2%; padding-left: 1%; padding-right: 1%; padding-top: 0.1%; padding-bottom: 0.1%;} 
     p.text {text-align: justify;}
-    div.main {border-style: solid; border-color: rgb(245, 32, 64); border-radius: 25px; background-color: white; margin-left: 2%; margin-right: 2%px; padding-left: 0.1%; padding-right: 0.1%; padding-top: 0.1%; padding-bottom: 0.1%;}
+    div.main {border-style: solid; border-color: rgb(245, 32, 64); border-radius: 25px; background-color: white; margin-left: 2%; margin-right: 2%px; padding-left: 1%; padding-right: 1%; padding-top: 0.1%; padding-bottom: 0.1%;}
     
     
     th {background-color: rgb(245, 32, 64); color: white; font-size: 25pt;}
@@ -151,7 +151,7 @@
         <br>
         <div class="body">
             <h1> Welcome to the World of Formula 1</h1>
-            <p style="float: right;"><img id="slideshowimg" src="https://cdn-1.motorsport.com/images/mgl/6D1aOb90/s1200/wet-weather-1.webp" alt="Max Verstappen at the Belgian Grand Prix, 2021."  width="60%" ></p>
+            <p style="margin-right: auto; margin-left: auto;"><img id="slideshowimg" src="https://cdn-1.motorsport.com/images/mgl/6D1aOb90/s1200/wet-weather-1.webp" alt="Max Verstappen at the Belgian Grand Prix, 2021."  width="60%" ></p>
             <p class="text" style="text-align: justify;">
                 Welcome to Formula Top Three. Formula 1 consists of 10 teams, battling it out with cars that independently designed, with every single component being hand-made and custom designed for each of the 10 teams. It is the world's most competitive single seat motorsport racing competition. In a normal formula 1 season, 10 teams with 2 drivers each compete for the championship. Here, we will only discuss the top 3 teams.Currently, they are Mercedes, Red Bull Racing, and McLaren. A Formula 1 season consists of 2 championships: The drivers' championship, for drivers to become world champions, and the Constructors Championship, for the Teams to win the championships. 
             </p>
