--- a/release2/AboutMe.html
+++ b/release2/AboutMe.html
@@ -67,7 +67,7 @@
         <div class="body" style="text-align: justify;">
             <p>
                 <img src="Romil.jpg" width="600" style="float: right; padding-left: 20px; " alt="Romil Agarwal">
-                I'm Romil Agarwal and I'm currently a junior at Babson College. I'm from Mumbai, India, and I'm developing this website as part of my Web Technologies course at Babson. I've been a Formula 1 fan for quite some time now, and I always thought about having my own page where I could write whatever I was feeling about the races. I think this website is an outlet for me to share my opinoins on the races, and how the top 6 drivers are currently performing. 
+                I'm Romil Agarwal and I'm currently a junior at Babson College. I'm from Mumbai, India, and I'm developing this website as part of my Web Technologies course at Babson. I've been a Formula 1 fan for quite some time now, and I always thought about having my own page where I could write whatever I was feeling about the races. I think this website is an outlet for me to share my opinions on the races, and how the top 6 drivers are currently performing. 
             </p>
             <p>
               At Babson, I plan on concentrating in Finance and Economics. After graduating, I plan to join my family business back home in Mumbai. I believe studying at Babson has been an enriching experience for me, and it will allow me to join my family business and give valuable contributions to grow and expand it.   
