--- a/release2/index.html
+++ b/release2/index.html
@@ -37,7 +37,7 @@
     th {background-color: rgb(245, 32, 64); color: white; font-size: 25pt;}
     td {font-size: 20pt;}
     tr:nth-child(even) {background-color:lightgray;}
-    hr {height:1%; background-color:black;}
+    hr {height:5px; background-color:black;}
     img.racing {padding-left: 0px; position: relative; top: 20px;}
     .cap {text-align: center; font-weight: bold;}
     .hide {display: none;}
