--- a/release2/projectMobile.htm
+++ b/release2/projectMobile.htm
@@ -38,7 +38,7 @@
     th {background-color: rgb(245, 32, 64); color: white; font-size: 25pt;}
     td {font-size: 20pt;}
     tr:nth-child(even) {background-color:lightgray;}
-    hr {height:1%; background-color:black;}
+    hr {height:5px; background-color:black;}
     .cap {text-align: center; font-weight: normal;}
     .hide {display: none;}
     #myh1 {display: none;}
