--- a/session24/index.htm
+++ b/session24/index.htm
@@ -7,6 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script>
+    $(function(){
+      $("#p1").text("This is paragraph #1.");
+      $("#img1").click(function(){
+        $(this).attr("src", "https://images.pexels.com/photos/3826588/pexels-photo-3826588.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500")
+      })
+
+    });
+  </script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <style>
     img {width: 200px; height: 200px;}
@@ -16,7 +25,7 @@
     .navbar-header {background-color: royalblue;}
   </style>
 </head>
-<body>
+<body id="bod">
   <nav class="navbar navbar-default">
     <div class="container-fluid">
     <div class="navbar-header">
@@ -51,7 +60,7 @@
     <div class="row">
       <div class="col-sm-4">
         
-        <p>This is first paragragh.</p>
+        <p id="p1">This is first paragragh.</p>
         <p>This is second paragraph.</p>
       </div>
       <div class="col-sm-4">
@@ -68,10 +77,10 @@
     </div>
     <div class="row">
       <div class="col-sm-4" style="background-color: red;">
-        <p><img src="https://images.pexels.com/photos/6357186/pexels-photo-6357186.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"></p>
+        <p><img id="img1" src="https://images.pexels.com/photos/6357186/pexels-photo-6357186.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"></p>
       </div>
       <div class="col-sm-4" style="background-color: blue;">
-        <p> <img src="https://images.pexels.com/photos/3826588/pexels-photo-3826588.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"></p>
+        <p> <img id="img2" src="https://images.pexels.com/photos/3826588/pexels-photo-3826588.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"></p>
       </div>
       <div class="col-sm-4" style="background-color: green;">
         <p><img src="https://images.pexels.com/photos/6149485/pexels-photo-6149485.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"></p>
