--- a/release2/projectMobile.htm
+++ b/release2/projectMobile.htm
@@ -73,7 +73,7 @@
         {
             leftpad = leftpad + 3
             document.getElementById("racecar").style.paddingLeft= leftpad + 2 + "%";
-            if (leftpad < 80)
+            if (leftpad < 75)
             {
                 setTimeout("RaceCar()", 1);
             }
@@ -148,6 +148,7 @@
             <li>
                 <a href="AboutMe.html">About Me</a>
             </li>
+            <li></li>
             <li>
                 <a href="Credits.html">Credits</a>
             </li>
@@ -158,7 +159,7 @@
         <br>
         <div class="body">
             <h1> Welcome to the World of Formula 1</h1>
-            <p style="margin-right: auto; margin-left: auto;"><img id="slideshowimg" src="https://cdn-1.motorsport.com/images/mgl/6D1aOb90/s1200/wet-weather-1.webp" alt="Max Verstappen at the Belgian Grand Prix, 2021."  width="60%" ></p>
+            <p style="text-align: center;"><img id="slideshowimg" src="https://cdn-1.motorsport.com/images/mgl/6D1aOb90/s1200/wet-weather-1.webp" alt="Max Verstappen at the Belgian Grand Prix, 2021."  width="60%" ></p>
             <p class="text" style="text-align: justify;">
                 Welcome to Formula Top Three. Formula 1 consists of 10 teams, battling it out with cars that independently designed, with every single component being hand-made and custom designed for each of the 10 teams. It is the world's most competitive single seat motorsport racing competition. In a normal formula 1 season, 10 teams with 2 drivers each compete for the championship. Here, we will only discuss the top 3 teams.Currently, they are Mercedes, Red Bull Racing, and McLaren. A Formula 1 season consists of 2 championships: The drivers' championship, for drivers to become world champions, and the Constructors Championship, for the Teams to win the championships. 
             </p>
