--- a/release2/projectMobile.htm
+++ b/release2/projectMobile.htm
@@ -32,7 +32,7 @@
     h1 {text-align: center; font-size: 25pt; font-weight: normal;}
     div.body {border-style: solid; border-color: rgb(245,32,64); text-align: justify; border-radius: 25px; background-color: white; margin-right: 2%; margin-left: 2%; padding-left: 1%; padding-right: 1%; padding-top: 0.1%; padding-bottom: 0.1%;} 
     p.text {text-align: justify;}
-    div.main {border-style: solid; border-color: rgb(245, 32, 64); border-radius: 25px; background-color: white; margin-left: 2%; margin-right: 2%px; padding-left: 1%; padding-right: 1%; padding-top: 0.1%; padding-bottom: 0.1%;}
+    div.main {border-style: solid; border-color: rgb(245, 32, 64); border-radius: 25px; background-color: white; margin-left: 2%; margin-right: 2%; padding-left: 1%; padding-right: 1%; padding-top: 0.1%; padding-bottom: 0.1%;}
     
     
     th {background-color: rgb(245, 32, 64); color: white; font-size: 25pt;}
