--- a/release2/Credits.html
+++ b/release2/Credits.html
@@ -61,7 +61,7 @@
         <div class="body">
             <h1> Credits </h1>
             <ol>
-                <li>All Formula 1 content has been sourced from the official Formula 1 website, which allows students to use all content without permission for educational projects. The link to Formula one website is <a href="https:formula1.com">Formula 1</a> and the legal notices can be found on <a href="https://www.formula1.com/en/toolbar/legal-notices.html">Legal Notices.</a></li>
+                <li>All Formula 1 content has been sourced from the official Formula 1 website, which allows students to use all content without permission for educational projects. The link to Formula one website is <a href="https://formula1.com">Formula 1</a> and the legal notices can be found on <a href="https://www.formula1.com/en/toolbar/legal-notices.html">Legal Notices.</a></li>
                 <li>The background image for the index page has been downloaded from a public domain free to use website. The link to the website is <a href="https://www.wallpapertip.com/">wallpapertip</a> and the specific image URL is <a href="https://www.wallpapertip.com/wpic/bmTJTh_chequered-flag-data-src-full-340093-waving-checkered/">Background Image</a></li>
                 <li>Other images like the first image on the Index Page before the slideshow runs, and the photos of Team principals are all embedded using the image address.</li>
             </ol>
