--- a/release2/index.html
+++ b/release2/index.html
@@ -21,6 +21,7 @@
     <!--JQuery #2: Clicking the Button Appends my Email ID within the same P tag on the About Me Page.-->
     <!--JQuery #3: When the Home Page loads, the "Formula Top Three" heading fades in.-->
     <!--JQuery #4: Clicking the Button below each circuit map on the Team Pages (Mercedes, McLaren and Red Bull) enlarges the circuit map image-->
+    <!--Points Recovery: There is a colspan of 2 in lines 201, 281, and 327.-->
     
     <title>Formula Top Three</title>
     <link rel="stylesheet" href="externalstylesheet.css" type="text/css">
